@@ -1,3 +1,9 @@
+2005-09-18  Osmo Salomaa  otsaloma@cc.hut.fi
+
+	* lib/gaupol/gtk/actions/action.py (Action): Subclass Delegate.
+
+	* lib/gaupol/gtk/delegates/delegate.py: Synced with delegate in base.
+
 2005-09-17  Osmo Salomaa  otsaloma@cc.hut.fi
 
 	* lib/gaupol/gtk/actions:
